Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -337,7 +337,7 @@
     "credit": "Haver",
     "crm": "CRM",
     "cron-job": "Tasca programada",
-    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
+    "cron-timeout": "El cron s'ha aturat per no superar el temps màxim d'execució de PHP. Si us plau, executa el cron des de terminal per evitar aquest límit.",
     "crons": "Crons",
     "currency": "Moneda",
     "currency-position": "Posició símbol de divisa",
@@ -1030,7 +1030,7 @@
     "not-allowed-modify": "No té permís per a modificar",
     "not-enough-stock": "No hi ha prou estoc de %reference%",
     "not-passed-integrity-check": "Alguns arxius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir més detalls aquí<\/a>.",
-    "not-public": "No público",
+    "not-public": "No públic",
     "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "E-mail %email% no vàlid",
     "not-valid-fiscal-number": "El %type% %number% no és vàlid",
