--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -486,7 +486,7 @@
     "dont-sell-below-cost": "Verkaufe nicht unter Kosten",
     "download": "Download",
     "download-completed": "Download beendet",
-    "download-error": "Error al descargar. Código %status% - %error%",
+    "download-error": "Fehler beim Herunterladen. Code %status% - %error%",
     "download-xml": "Descargar XML",
     "downloads": "Downloads",
     "drag": "Arrastrar",
@@ -553,7 +553,7 @@
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
-    "es-tax-exception-e6": "España: excepción por otra causa",
+    "es-tax-exception-e6": "Spanien: Steuerausnahme aus einem anderen Grund",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
@@ -760,7 +760,7 @@
     "info": "Info",
     "infostate-component-title": "Status Information",
     "initial-number": "Anfangsnummer",
-    "insert-update": "Añadir o modificar",
+    "insert-update": "Einfügen oder aktualisieren",
     "installed": "installiert",
     "installed-plugins": "installed-plugins",
     "installer": "FacturaScripts 2018 (Alpha) Installationsprogramm",
@@ -777,7 +777,7 @@
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "invalid-iban",
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
-    "invalid-number": "invalid-number",
+    "invalid-number": "Ungültige Nummer",
     "invalid-request": "Antrag nicht gültig",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
     "invalid-web": "Dirección web no válida",
@@ -920,7 +920,7 @@
     "main-address": "Hauptadresse",
     "manage": "manage",
     "manage-installation": "Administrar",
-    "manual": "manual",
+    "manual": "Handbuch",
     "manufacturer": "Hersteller",
     "manufacturer-code": "Hersteller Code",
     "manufacturers": "Hersteller",
@@ -1030,7 +1030,7 @@
     "not-allowed-modify": "Sie haben keine Berechtigung zum Ändern",
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
-    "not-public": "No público",
+    "not-public": "Nicht öffentlich",
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
@@ -1183,7 +1183,7 @@
     "price-with-tax": "Preis + Steuer",
     "principal": "Main",
     "print": "Drucken",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Bankdaten drucken",
     "print-data-records": "Alle Datensätze drucken",
     "print-export-options": "Druck- und Exportoptionen",
     "print-list-of-records": "Liste der Datensätze drucken",
@@ -1247,7 +1247,7 @@
     "record-updated-correctly": "Register erfolgreich aktualisiert.",
     "recreate-system-integrity": "Systemintegrität wiederherstellen",
     "rectified-invoice": "Korrekturrechnung",
-    "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoice-p": "Rechnungen sind Handelsdokumente und unterliegen bestimmten gesetzlichen Beschränkungen. Sie können nicht gelöscht oder geändert werden. Nur vollständige oder teilweise Rücksendungen sind möglich. Verwenden Sie dieses Formular, um eine Rücksendung für diese Rechnung zu erstellen.",
     "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Korrekturserie",
@@ -1256,7 +1256,7 @@
     "reference+description": "Referenz + Beschreibung",
     "refresh": "Aktualisierung",
     "refresh-page": "Seite neu laden",
-    "refund-amount": "Cantidad devuelta",
+    "refund-amount": "Rückzahlungsbetrag",
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Rückerstattungen",
     "register": "Registrar",
@@ -1276,7 +1276,7 @@
     "remove-from-list": "Löschen",
     "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Erneuern",
-    "renumber": "Renumerar",
+    "renumber": "Umbenennen",
     "renumber-accounting": "Buchungen neu nummerieren",
     "renumber-accounting-error": "Bei der Neunummerierung der Buchungen im Geschäftsjahr %exerciseCode% ist ein Fehler aufgetreten",
     "renumber-accounting-ok": "Neunummerierung der Buchungen abgeschlossen.",
@@ -1427,7 +1427,7 @@
     "stockmax": "Lager max.",
     "stockmin": "Lager min.",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
-    "storage-limit-reached": "storage-limit-reached",
+    "storage-limit-reached": "Speicherlimit erreicht",
     "stripe": "Stripe",
     "structured-data-csv": "CSV-Datei",
     "sub-account": "Unterkonto",
@@ -1545,7 +1545,7 @@
     "totallinea-value-error": "Fehler im Gesamtbetrag der Mehrwertsteuerzeile der Steuer 0 der Rechnung. Richtiger Wert: 1",
     "totals": "Totales",
     "town": "Stadt, Dorf",
-    "tracking-code": "tracking-code",
+    "tracking-code": "Tracking-Code",
     "transfer": "transfer",
     "transfers": "transfers",
     "transfers-stock": "Transfers stock",
@@ -1570,7 +1570,7 @@
     "under-minimums": "under-minimums",
     "undo": "Rückgängig machen",
     "unit-profit": "unit-profit",
-    "unit-purchase-price": "unit-purchase-price",
+    "unit-purchase-price": "Einzelhandelspreis",
     "unit-sale-price": "unit-sale-price",
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
@@ -1613,7 +1613,7 @@
     "vat": "IVA",
     "vat-document": "Steuerdokument",
     "vat-exception": "Excepción de IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-is-short": "Die Nummer '%vat-number%' ist zu kurz",
     "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "MwSt-Regelung",
     "VAT-register": "Steuerbuch",
