--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -637,7 +637,7 @@
     "font": "Font",
     "font-size": "Dimensione del font",
     "footer": "Pié de página",
-    "footer-text": "footer-text",
+    "footer-text": "testo-di-chiusura",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
     "for-all-exercises": "Para todos los ejercicios",
@@ -702,7 +702,7 @@
     "group-by-month-unixtime": "group-by-month-unixtime",
     "group-by-subaccount": "Agrupar por subcuenta",
     "group-by-week": "group-by-week",
-    "group-by-week-unixtime": "group-by-week-unixtime",
+    "group-by-week-unixtime": "Raggruppa per settimana unixtime",
     "group-by-year": "Raggruppa per anno",
     "group-by-year-unixtime": "group-by-year-unixtime",
     "group-more-docs-p": "group-more-docs-p",
@@ -778,7 +778,7 @@
     "invalid-iban": "IBAN invalido %iban%",
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "invalid-number",
-    "invalid-request": "Petición no válida",
+    "invalid-request": "Richiesta non valida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
     "invalid-web": "Dirección web no válida",
     "invoice": "fattura",
@@ -813,7 +813,7 @@
     "january": "Enero",
     "job-name": "Nome del lavoro",
     "journal": "Journal",
-    "journal-closing": "journal-closing",
+    "journal-closing": "Chiusura giornale",
     "journal-opening": "journal-opening",
     "journals": "Journals",
     "july": "Julio",
@@ -824,7 +824,7 @@
     "lang-code": "Codice della lingua",
     "language": "Lingua",
     "languages-ca_ES": "languages-ca_ES",
-    "languages-cs_CZ": "Checo",
+    "languages-cs_CZ": "Ceco",
     "languages-de_DE": "languages-de_DE",
     "languages-en_EN": "languages-en_EN",
     "languages-es_AR": "Español (Argentina)",
@@ -868,7 +868,7 @@
     "left": "Sinistra",
     "level": "Livello",
     "level-benefit-sales": "Nivel para ver beneficios",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-cost-sales": "Livello per visualizzare i costi",
     "level1": "Livello 1",
     "level2": "Level 2",
     "level3": "Level 3",
@@ -954,7 +954,7 @@
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Scorta minima",
     "minutes": "Minutes",
-    "mismatched-accounting-entry": "mismatched-accounting-entry",
+    "mismatched-accounting-entry": "Mismatched registrazione contabile",
     "missing-data-epigraph-group": "Dati mancanti nell'epigrafe di gruppo.",
     "missing-data-subaccount": "Dati mancano dal subaccount.",
     "missing-epigraph-data": "I dati mancano dall'epigrafe.",
@@ -966,7 +966,7 @@
     "monday": "monday",
     "month": "Mes",
     "month-1": "Enero",
-    "month-10": "Octubre",
+    "month-10": "Ottobre",
     "month-11": "Noeviembre",
     "month-12": "Diciembre",
     "month-2": "Febrero",
@@ -987,7 +987,7 @@
     "more-plugins": "more-plugins",
     "move-lines": "Mover líneas",
     "movements": "movements",
-    "my-profile": "Mi perfil",
+    "my-profile": "Il mio profilo",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Questo campo è necessaria solo in alcuni hosting MySQL.",
@@ -1017,7 +1017,7 @@
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "no-invoice",
     "no-outstanding-amount": "no-outstanding-amount",
-    "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-print-permission": "Non ha il permesso di stampare o esportare",
     "no-reference": "Sin referencia",
     "no-selected-item": "no-selected-item",
     "no-stock": "Niente scorte",
@@ -1060,7 +1060,7 @@
     "only-owner-data": "only-owner-data",
     "only-pending": "only-pending",
     "only-suspended": "Solo sospesi",
-    "open": "open",
+    "open": "apri",
     "open-exercise": "open-exercise",
     "open-tab": "Abrir en una nueva pestaña",
     "opened": "Aperto",
@@ -1089,11 +1089,11 @@
     "page-not-found": "Página no encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
-    "page-total-amount": "page-total-amount",
+    "page-total-amount": "importo-totale-pagina",
     "pagename": "Nome della pagina",
     "pages": "pagine",
     "paid": "Pagata",
-    "paid-or-unpaid": "Pagado o impagado",
+    "paid-or-unpaid": "Pagato o non pagato",
     "paid-receipts-prevent-action": "paid-receipts-prevent-action",
     "parent": "Genitore",
     "parent-account": "Parent Account",
@@ -1203,7 +1203,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Profit and Loss",
     "profit-and-loss-balance": "Profit and loss accounts",
-    "profits": "Beneficios",
+    "profits": "Profitti",
     "project": "project",
     "projects": "progetti",
     "provider-reference": "Riferimento del fornitore",
@@ -1324,7 +1324,7 @@
     "sdk": "sdk",
     "search": "Ricerca",
     "search-document": "Escribe el número de %doctype% para buscar.",
-    "search-product": "Search product",
+    "search-product": "Cerca prodotto",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimester",
@@ -1349,8 +1349,8 @@
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
-    "sent-a-picture": "Envió una imagen",
-    "sent-a-video": "Envió un video",
+    "sent-a-picture": "Ha inviato un'immagine",
+    "sent-a-video": "Ha inviato un video",
     "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "Septiembre",
@@ -1399,9 +1399,9 @@
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sort-by-ref-desc": "Ordina per riferimento discendente",
     "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sorted-desc": "Ordinato discendente",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Conto speciale",
@@ -1412,7 +1412,7 @@
     "standard": "standard",
     "start": "Inicio",
     "start-date": "Data d'inizio",
-    "start-hour": "Hora de inicio",
+    "start-hour": "Ora di inizio",
     "start-time": "start-time",
     "starting-cron": "A partire FacturaScripts Cron ...",
     "state": "Stato",
@@ -1482,7 +1482,7 @@
     "suspended": "Sospeso",
     "swift": "veloce",
     "symbol": "Simbolo",
-    "table": "table",
+    "table": "tabella",
     "table-checked": "Tabella 0 controllata.",
     "table-not-found": "table-not-found",
     "table-size": "table-size",
@@ -1521,7 +1521,7 @@
     "this-week": "this-week",
     "this-year": "Quest'anno",
     "thousands-separator": "migliaia",
-    "thursday": "thursday",
+    "thursday": "giovedì",
     "ticket": "Ticket",
     "tickets": "Tickets",
     "time": "Time",
@@ -1530,7 +1530,7 @@
     "title-font-size": "title-font-size",
     "title-url": "Title URL",
     "to": "A",
-    "to-refund": "A devolver",
+    "to-refund": "Da rimborsare",
     "to-report": "Informar",
     "today": "today",
     "total": "Totale",
@@ -1572,13 +1572,13 @@
     "unit-profit": "unit-profit",
     "unit-purchase-price": "unit-purchase-price",
     "unit-sale-price": "unit-sale-price",
-    "unlimited": "Ilimitado",
+    "unlimited": "Illimitato",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Disinstallazione cancellata dal registro correttamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "unpaid",
-    "until-accounting-entry": "until-accounting-entry",
+    "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "until-date",
     "until-subaccount": "until-subaccount",
     "update": "update",
@@ -1623,7 +1623,7 @@
     "version": "versione",
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
-    "view-api": "Ver API",
+    "view-api": "Visualizza API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "view-estimation": "Vedi citazione",
     "view-order": "Visualizza ordine",
@@ -1664,7 +1664,7 @@
     "years": "Anni",
     "yes": "se",
     "yesterday": "Ieri",
-    "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-cant-delete-primary-variant": "Non puoi eliminare la variante principale del prodotto",
     "you-sent-a-audio": "Hai inviato un audio",
     "you-sent-a-document": "Hai inviato un documento",
     "you-sent-a-location": "Hai inviato una posizione",
