--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -223,7 +223,7 @@
     "charts": "gráficos",
     "chat": "Chat",
     "check-table": "Erro ao verificar a tabela '0'",
-    "check-vies": "Comprobar VIES",
+    "check-vies": "Verificar VIES",
     "checked": "Checado",
     "children": "Criança",
     "children-accounts": "Children Accounts",
@@ -280,7 +280,7 @@
     "company-commission-info": "company-commission-info",
     "company-manager": "Gerente de empresa",
     "company-name": "Nome da empresa",
-    "company-warehouse": "Empresa\/Almacén",
+    "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
     "compared": "compared",
     "compatible": "Compatible",
@@ -332,7 +332,7 @@
     "create-invoice": "Crear factura",
     "create-new-record": "Criar novo registro",
     "created": "Created",
-    "created-default-admin-account": "O usuário <b> admin <\/ b> foi criado com a senha <b> admin <\/ b>.",
+    "created-default-admin-account": "O utilizador <b> admin <\/b> foi criado com a senha <b> admin <\/b>.",
     "creation-date": "Data de criação",
     "credit": "Credit",
     "crm": "CRM",
@@ -398,7 +398,7 @@
     "db-user": "Usuário de banco de dados",
     "debit": "Debit",
     "debug-mode": "Debug mode",
-    "december": "Diciembre",
+    "december": "Dezembro",
     "decimal-separator": "Decimal",
     "decimals": "Decimais",
     "default": "Default",
@@ -447,7 +447,7 @@
     "description-4ba": "Descrição 4ba",
     "description2": "description2",
     "description3": "description3",
-    "design": "Diseño",
+    "design": "Design",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
     "details": "Detalles",
@@ -551,7 +551,7 @@
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
-    "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
+    "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "E",
     "es-tax-regime-agrarian": "R",
@@ -561,7 +561,7 @@
     "es-tax-regime-general": "Régimen general",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
-    "es-tax-regime-simplified": "Régimen simplificado",
+    "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
     "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
@@ -656,7 +656,7 @@
     "from-accounting-entry": "from-accounting-entry",
     "from-date": "from-date",
     "from-subaccount": "from-subaccount",
-    "full-access": "full-access",
+    "full-access": "Acesso completo",
     "full-path": "Caminho completo",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
     "general": "Geral",
@@ -706,7 +706,7 @@
     "group-by-year": "group-by-year",
     "group-by-year-unixtime": "group-by-year-unixtime",
     "group-more-docs-p": "group-more-docs-p",
-    "group-name": "Nombre del Grupo",
+    "group-name": "Nome do Grupo",
     "group-or-split": "Group or split",
     "group-or-split-p": "group-or-split-p",
     "grouping-type": "Agrupación",
@@ -714,7 +714,7 @@
     "has-attachments": "Tiene adjuntos",
     "has-parent": "Tem pai",
     "hash": "Hash",
-    "header": "Cabecera",
+    "header": "Cabeçalho",
     "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
     "heading-account-id-root": "Cabeçalho da raiz da conta",
     "health": "health",
@@ -779,7 +779,7 @@
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Petición no válida",
-    "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
+    "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Dirección web no válida",
     "invoice": "Fatura",
     "invoice-email-subject": "A sua fatura %code%",
@@ -836,7 +836,7 @@
     "languages-es_ES": "Espanhol (Espanha)",
     "languages-es_GT": "Espanhol (Guatemala)",
     "languages-es_MX": "Español (México)",
-    "languages-es_PA": "Español (Panamá)",
+    "languages-es_PA": "Espanhol (Panamá)",
     "languages-es_PE": "Espanhol (Perú)",
     "languages-es_UY": "Espanhol (Uruguai)",
     "languages-eu_ES": "Basco",
@@ -986,7 +986,7 @@
     "more-fields": "Mais campos",
     "more-plugins": "Mais plugins",
     "move-lines": "Mover líneas",
-    "movements": "movements",
+    "movements": "movimentos",
     "my-profile": "Mi perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
@@ -1140,7 +1140,7 @@
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "p",
     "physical-stock": "Estoque físico",
-    "picking": "Picking",
+    "picking": "Preparação",
     "plan": "Plano",
     "please-enter-value": "Por favor insira um valor",
     "plugin": "Plugar",
@@ -1151,7 +1151,7 @@
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
-    "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
+    "plugin-need-update-but": "O plugin %plugin% ainda não tem uma atualização compatível.",
     "plugin-needed": "Plugin %pluginName% requerido.",
     "plugin-needs-fs-version": "plugin-needs-fs-version",
     "plugin-not-compatible": "Plugin %pluginName% não é compatível com FacturaScripts 2018.",
@@ -1177,7 +1177,7 @@
     "previous-balance": "Balanço anterior",
     "previous-documents": "previous-documents",
     "previous-quarter": "Trimestre anterior",
-    "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
+    "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Preço",
     "price-with-tax": "price-with-tax",
@@ -1265,9 +1265,9 @@
     "register-symbol": "#",
     "registered-installation": "r",
     "registered-installation-p": "registered-installation-p",
-    "regularization-operation": "Regularización",
+    "regularization-operation": "Operação de regularização",
     "reject": "Rechazar",
-    "rejected": "rejected",
+    "rejected": "rejeitado",
     "related": "related",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
@@ -1329,7 +1329,7 @@
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo Trimestre",
     "select": "select",
-    "select-all": "select-all",
+    "select-all": "selecionar-todos",
     "select-none": "select-none",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Select User",
@@ -1349,7 +1349,7 @@
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
-    "sent-a-picture": "Envió una imagen",
+    "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "sepa-suffix",
@@ -1513,7 +1513,7 @@
     "texts": "Textos",
     "third-quarter": "3º trimestre",
     "third-trimester": "Terceiro Trimestre",
-    "this-last-fortnight": "A última quinzena",
+    "this-last-fortnight": "Nesta última quinzena",
     "this-last-month": "O último mês",
     "this-last-week": "A última semana",
     "this-last-year": "this-last-year",
@@ -1531,7 +1531,7 @@
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
-    "to-report": "Informar",
+    "to-report": "Para relatar",
     "today": "Hoje",
     "total": "Total",
     "total-amount": "total-amount",
