--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -337,7 +337,7 @@
     "credit": "Crèdit",
     "crm": "CRM",
     "cron-job": "Tasca programada",
-    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
+    "cron-timeout": "El cron s'ha aturat per a no superar el temps màxim d'execució de PHP. Si us plau, executa el cron des de terminal per a evitar aquest límit.",
     "crons": "Crons",
     "currency": "Moneda",
     "currency-position": "Posició del símbol de la moneda",
@@ -640,7 +640,7 @@
     "footer-text": "Footer text",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "Per a tots els exercicis",
     "for-purchase": "Per a comprar",
     "for-sale": "Per a vendre",
     "foresee": "Prevore",
@@ -718,7 +718,7 @@
     "heading-account-group-id": "ID del grup",
     "heading-account-id-root": "ID del pare",
     "health": "Salut",
-    "height": "Alto",
+    "height": "Alt",
     "hello": "Hola",
     "help": "Ajuda",
     "help-button-p": "Consulta la ayuda en cada pantalla",
@@ -931,11 +931,11 @@
     "marked-as-homepage": "Marcat com a pàgina d'inici",
     "max-input-vars-warning": "Amb la configuració actual de PHP (max_input_vars) no podràs treballar amb documents de més de %numlines% línies.",
     "max-risk": "Risc màxim",
-    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-with-cifnif": "Màxim import amb CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Estoc màxim",
     "may": "Mayo",
-    "mega-search": "MegaBuscador",
+    "mega-search": "MegaCercador",
     "memcache": "Memcache",
     "memcache-clear": "S'ha netejat la Memcache.",
     "memcache-delete-key-item": "L'element '%item%' s'ha eliminat de la Memcache.",
@@ -1030,7 +1030,7 @@
     "not-allowed-modify": "No té permís per a modificar",
     "not-enough-stock": "No hi ha suficient estoc de %reference%",
     "not-passed-integrity-check": "Alguns archius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtindre més detalls ací<\/a>.",
-    "not-public": "No público",
+    "not-public": "No públic",
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "La direcció de correu %email% no és vàlida",
     "not-valid-fiscal-number": "El %type% %number% no és vàlit",
@@ -1065,13 +1065,13 @@
     "open-tab": "Abrir en una nueva pestaña",
     "opened": "Obert",
     "opening-acounting-completed": "Obertura d'exercici correcta",
-    "opening-operation": "Apertura",
+    "opening-operation": "Obertura",
     "operation": "Operación",
     "operator": "Operador",
     "option": "Opció",
     "optional": "opcional",
     "options": "Opcions",
-    "options-button-header": "Maquetación y permisos",
+    "options-button-header": "Maquetació i permisos",
     "order": "Encomanda",
     "order-email-subject": "order-email-subject",
     "order-email-text": "order-email-text",
@@ -1147,7 +1147,7 @@
     "plugin-deleted": "El Plugin %pluginName% s'ha aliminat correctament.",
     "plugin-disabled": "El Plugin %pluginName% s'ha desactivat correctament.",
     "plugin-enabled": "El Plugin %pluginName% s'ha activat correctament.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "Aquest servidor no permet pujar arxius de més de %size% MB. Si us plau, augmenta la mida màxima de pujada d'arxius en PHP o copia l'arxiu a la carpeta Plugins.",
     "plugin-installation-disabled": "L'instalacion de complements està deshabilitada en este servidor",
     "plugin-installed": "S'ha instalat el Plugin '%pluginName%'",
     "plugin-need-update": "El plugin %plugin% necessitarà actualització per a funcionar amb la nova versió de FacturaScripts.",
@@ -1183,12 +1183,12 @@
     "price-with-tax": "Preu + impostos",
     "principal": "Principal",
     "print": "Imprimir",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Imprimir compte bancari",
     "print-data-records": "Imprimir tots els registres",
     "print-export-options": "Opcions d'impressió i d'exportació",
     "print-list-of-records": "Imprimix el llistat de registres",
     "print-price": "Imprimir precios",
-    "print-quantity": "Imprimir cantidad",
+    "print-quantity": "I",
     "printed": "Imprès",
     "printing-format": "Format d'impressió",
     "printing-formats": "Formats d'impressió",
@@ -1285,7 +1285,7 @@
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Repetix la contrasenya",
     "repeat-password": "Repetir contraseña",
-    "reply": "Respuesta",
+    "reply": "Resposta",
     "report": "Informe",
     "report-grouping-account": "Agrupar per contes",
     "report-non-grouping-account": "No agrupar per contes",
@@ -1338,16 +1338,16 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
-    "send-documents": "Enviar documentos",
-    "send-images": "Enviar imágenes",
-    "send-invoices": "Enviar facturas",
+    "send-documents": "Enviar documents",
+    "send-images": "Enviar imatges",
+    "send-invoices": "Enviar factures",
     "send-location": "Enviar ubicación",
     "send-mail": "Enviar el correu",
     "send-mail-error": "Hi ha hagut un erro a l'enviar el correu",
     "send-mail-ok": "El correu s'ha enviar correctament",
-    "send-videos": "Enviar vídeos",
+    "send-videos": "E",
     "sent-a-audio": "Envió un audio",
-    "sent-a-document": "Envió un documento",
+    "sent-a-document": "Envià un document",
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Envió una imagen",
     "sent-a-video": "Envió un video",
@@ -1397,7 +1397,7 @@
     "sort": "Orde",
     "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por fecha desc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar per data desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
     "sorted-asc": "Ordenado ascendente",
@@ -1433,7 +1433,7 @@
     "sub-account": "Subconte",
     "sub-type": "Subtipus",
     "subaccount": "Subconte",
-    "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
+    "subaccount-bad-codcuenta": "L",
     "subaccount-belongs-other-year": "El subcompte %subAccountCode% pertany a un altre eixercici.",
     "subaccount-irpf": "Conte per a les retencions",
     "subaccount-irpf-creditor": "Conte de l'acreedor de IRPF",
@@ -1505,7 +1505,7 @@
     "template": "Plantilla",
     "template-error": "Error en la plantilla",
     "template-not-found": "No s'ha trobat la plantilla",
-    "templates": "Plantillas",
+    "templates": "Plantilles",
     "test": "Prova",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
@@ -1575,7 +1575,7 @@
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "Instal·lació borrada del registre correctament.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagat",
     "until-accounting-entry": "Fins a assentament",
@@ -1625,7 +1625,7 @@
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
-    "view-estimation": "Ver presupuesto",
+    "view-estimation": "V",
     "view-order": "Ver pedido",
     "warehouse": "Magatzem",
     "warehouse-cant-be-same": "L'almagasém d'orige i el de destí no poden ser el mateix.",
@@ -1645,7 +1645,7 @@
     "wildcard-title": "Comodins reemplaçables per valor",
     "without-closure": "Sense el tancament",
     "without-domicile": "Sense domiciliar",
-    "without-groups": "Sin grupo",
+    "without-groups": "Sense grup",
     "without-regularization": "Sense regularització",
     "without-tax": "Sense IVA",
     "without-taxation": "Sense imposts",
@@ -1654,7 +1654,7 @@
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
     "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
-    "write-a-message-here": "Escribe un mensaje aquí",
+    "write-a-message-here": "Escriu un missatge ací",
     "x-column": "Columna X",
     "x-operation": "Operació sobre X",
     "y-column": "Columna Y",
@@ -1664,15 +1664,15 @@
     "years": "Anys",
     "yes": "Sí",
     "yesterday": "Ahir",
-    "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-cant-delete-primary-variant": "No pots eliminar la variant principal del producte",
     "you-sent-a-audio": "Enviaste un audio",
-    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-document": "Vas enviar un document",
     "you-sent-a-location": "Enviaste una ubicación",
     "you-sent-a-picture": "Enviaste una imagen",
     "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "Deuries canviar la teua contrasenya",
     "your": "seu",
     "zip-code": "Codi postal",
-    "zip-codes": "Códigos postales",
+    "zip-codes": "Codis postals",
     "zip-error-wrong-structure": "L'estructura del zip és incorrecta. Deu contindre la carpeta del complement i només un complement."
 }
