--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -329,15 +329,15 @@
     "create-accounting-entry": "Create Accounting Entry",
     "create-delivery-note": "Crear albarán",
     "create-estimation": "Crear presupuesto",
-    "create-invoice": "Crear factura",
+    "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
     "created": "Created",
-    "created-default-admin-account": "O usuário <b> admin <\/ b> foi criado com a senha <b> admin <\/ b>.",
+    "created-default-admin-account": "O utilizador <b> admin <\/b> foi criado com a senha <b> admin <\/b>.",
     "creation-date": "Data de criação",
     "credit": "Credit",
     "crm": "CRM",
     "cron-job": "cron-job",
-    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
+    "cron-timeout": "O cron parou para não exceder o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar esse limite.",
     "crons": "Crons",
     "currency": "Moeda",
     "currency-position": "Currency position",
@@ -398,7 +398,7 @@
     "db-user": "Usuário de banco de dados",
     "debit": "Débito",
     "debug-mode": "Modo de depuração",
-    "december": "Diciembre",
+    "december": "Dezembro",
     "decimal-separator": "Decimal",
     "decimals": "Decimais",
     "default": "Default",
@@ -447,7 +447,7 @@
     "description-4ba": "Descrição 4ba",
     "description2": "Descrição 2",
     "description3": "Descrição 3",
-    "design": "Diseño",
+    "design": "Design",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
     "details": "Detalles",
@@ -462,7 +462,7 @@
     "discount": "Desconto",
     "display": "Display",
     "display-date": "Data de exibição",
-    "do-not-disable-plugins": "No desactivar plugins",
+    "do-not-disable-plugins": "Não desativar plugins",
     "do-not-group": "do-not-group",
     "do-nothing": "Do nothing",
     "doc-type": "Document type",
@@ -487,7 +487,7 @@
     "download": "download",
     "download-completed": "Download completado",
     "download-error": "Error al descargar. Código %status% - %error%",
-    "download-xml": "Descargar XML",
+    "download-xml": "Baixar XML",
     "downloads": "downloads",
     "drag": "Arrastrar",
     "dto": "Disco.",
@@ -512,7 +512,7 @@
     "email-sent-to": "email-sent-to",
     "email-signature": "email-signature",
     "email-to": "Email To",
-    "emails": "Emails",
+    "emails": "E-mails",
     "emails-sent": "emails-sent",
     "employee": "Employee",
     "employees": "employees",
@@ -551,17 +551,17 @@
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
-    "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
+    "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "E",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-exempt": "Exento",
+    "es-tax-regime-exempt": "Isento do regime de impostos",
     "es-tax-regime-general": "Régimen general",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
-    "es-tax-regime-simplified": "Régimen simplificado",
+    "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
     "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
@@ -655,8 +655,8 @@
     "from": "from",
     "from-accounting-entry": "from-accounting-entry",
     "from-date": "from-date",
-    "from-subaccount": "from-subaccount",
-    "full-access": "full-access",
+    "from-subaccount": "de subconta",
+    "full-access": "Acesso completo",
     "full-path": "Caminho completo",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
     "general": "Geral",
@@ -706,7 +706,7 @@
     "group-by-year": "group-by-year",
     "group-by-year-unixtime": "group-by-year-unixtime",
     "group-more-docs-p": "group-more-docs-p",
-    "group-name": "Nombre del Grupo",
+    "group-name": "Nome do Grupo",
     "group-or-split": "Group or split",
     "group-or-split-p": "group-or-split-p",
     "grouping-type": "Agrupación",
@@ -714,7 +714,7 @@
     "has-attachments": "Tiene adjuntos",
     "has-parent": "Tem pai",
     "hash": "Hash",
-    "header": "Cabecera",
+    "header": "Cabeçalho",
     "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
     "heading-account-id-root": "Cabeçalho da raiz da conta",
     "health": "health",
@@ -779,7 +779,7 @@
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Petición no válida",
-    "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
+    "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Dirección web no válida",
     "invoice": "Fatura",
     "invoice-email-subject": "A sua fatura %code%",
@@ -788,13 +788,13 @@
     "invoice-have-rectifying-cant-delete": "A factura já possui uma retificação. Não pode ser excluído.",
     "invoice-new-assigned-date": "Há invocados com maior data (0). Nova data atribuída: 1",
     "invoice-number": "Número da factura",
-    "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
+    "invoice-receipts-diff": "Há uma diferença (%diff%) entre o valor da fatura e a soma de seus recibos.",
     "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de 0. A data não pode ser modificada.",
     "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de 0. Ele não pode ser excluído.",
     "invoice-without-acc-entry": "invoice-without-acc-entry",
     "invoiced": "invoiced",
     "invoices": "Faturas",
-    "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
+    "invoices-cant-generate-new-docs": "As faturas não podem gerar novos documentos",
     "ip": "IP",
     "ip-banned": "ip-banned",
     "irpf": "IRPF",
@@ -836,7 +836,7 @@
     "languages-es_ES": "Espanhol",
     "languages-es_GT": "Espanhol (Guatemala)",
     "languages-es_MX": "Español (México)",
-    "languages-es_PA": "Español (Panamá)",
+    "languages-es_PA": "Espanhol (Panamá)",
     "languages-es_PE": "Espanhol (Perú)",
     "languages-es_UY": "Espanhol (Uruguai)",
     "languages-eu_ES": "Basco",
@@ -854,7 +854,7 @@
     "last-month": "O último mês",
     "last-price-estimation": "Última precio de presupuesto",
     "last-price-sale": "Último precio de venta",
-    "last-purchase-price": "last-purchase-price",
+    "last-purchase-price": "último preço de compra",
     "last-quarter": "last-quarter",
     "last-semester": "Último semestre",
     "last-trimester": "Último trimestre",
@@ -868,7 +868,7 @@
     "left": "Left",
     "level": "Level",
     "level-benefit-sales": "Nivel para ver beneficios",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-cost-sales": "Nível para visualizar custos",
     "level1": "Level 1",
     "level2": "Level 2",
     "level3": "Level 3",
@@ -968,7 +968,7 @@
     "month-1": "Enero",
     "month-10": "Octubre",
     "month-11": "Noeviembre",
-    "month-12": "Diciembre",
+    "month-12": "Dezembro",
     "month-2": "Febrero",
     "month-3": "Marzo",
     "month-4": "Abril",
@@ -986,7 +986,7 @@
     "more-fields": "Mais campos",
     "more-plugins": "Mais plugins",
     "move-lines": "Mover líneas",
-    "movements": "movements",
+    "movements": "movimentos",
     "my-profile": "Mi perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
@@ -1094,7 +1094,7 @@
     "pages": "Páginas",
     "paid": "Pagado",
     "paid-or-unpaid": "Pagado o impagado",
-    "paid-receipts-prevent-action": "paid-receipts-prevent-action",
+    "paid-receipts-prevent-action": "Recibos pagos impedem a ação",
     "parent": "Pai",
     "parent-account": "Conta Pai",
     "parent-family-cant-be-child": "A família mãe não pode ser a mesma que a criança.",
@@ -1140,7 +1140,7 @@
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "p",
     "physical-stock": "Estoque físico",
-    "picking": "Picking",
+    "picking": "Preparação",
     "plan": "Plano",
     "please-enter-value": "Por favor insira um valor",
     "plugin": "Plugar",
@@ -1151,7 +1151,7 @@
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
-    "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
+    "plugin-need-update-but": "O plugin %plugin% ainda não tem uma atualização compatível.",
     "plugin-needed": "Plugin %pluginName% requerido.",
     "plugin-needs-fs-version": "plugin-needs-fs-version",
     "plugin-not-compatible": "Plugin %pluginName% não é compatível com FacturaScripts 2018.",
@@ -1177,7 +1177,7 @@
     "previous-balance": "Balanço anterior",
     "previous-documents": "previous-documents",
     "previous-quarter": "Trimestre anterior",
-    "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
+    "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Preço",
     "price-with-tax": "price-with-tax",
@@ -1265,9 +1265,9 @@
     "register-symbol": "#",
     "registered-installation": "r",
     "registered-installation-p": "registered-installation-p",
-    "regularization-operation": "Regularización",
+    "regularization-operation": "Operação de regularização",
     "reject": "Rechazar",
-    "rejected": "rejected",
+    "rejected": "rejeitado",
     "related": "related",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
@@ -1281,7 +1281,7 @@
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumerar as faturas com base na data, de menor para maior",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Repita a senha",
     "repeat-password": "Repetir contraseña",
@@ -1329,7 +1329,7 @@
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo Trimestre",
     "select": "select",
-    "select-all": "select-all",
+    "select-all": "selecionar-todos",
     "select-none": "select-none",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Select User",
@@ -1349,7 +1349,7 @@
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
-    "sent-a-picture": "Envió una imagen",
+    "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "sepa-suffix",
@@ -1357,7 +1357,7 @@
     "sequences": "sequences",
     "serial-number": "Número de Série",
     "serie": "Série",
-    "serieb": "Serie B",
+    "serieb": "Série B",
     "serier": "Serie R",
     "serierb": "Serie RB",
     "series": "Séries",
@@ -1453,7 +1453,7 @@
     "summary": "Summary",
     "sums-and-balances": "Sumas y saldos",
     "sunday": "domingo",
-    "supplied": "supplied",
+    "supplied": "abastecido",
     "supplied-amount": "supplied-amount",
     "supplied-subaccount-not-found": "supplied-subaccount-not-found",
     "supplier": "Fornecedor",
@@ -1508,12 +1508,12 @@
     "templates": "Plantillas",
     "test": "Test",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
-    "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
+    "test-sendmail-not-implemented": "O teste do controlador de correio sendmail não está implementado",
     "text-color": "Color de texto",
     "texts": "Textos",
     "third-quarter": "3º trimestre",
     "third-trimester": "Terceiro Trimestre",
-    "this-last-fortnight": "A última quinzena",
+    "this-last-fortnight": "Nesta última quinzena",
     "this-last-month": "O último mês",
     "this-last-week": "A última semana",
     "this-last-year": "this-last-year",
@@ -1531,7 +1531,7 @@
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
-    "to-report": "Informar",
+    "to-report": "Para relatar",
     "today": "Hoje",
     "total": "Total",
     "total-amount": "total-amount",
@@ -1546,7 +1546,7 @@
     "totals": "Totales",
     "town": "Cidade",
     "tracking-code": "Código de envio",
-    "transfer": "transfer",
+    "transfer": "transferir",
     "transfers": "transfers",
     "transfers-stock": "Transfers stock",
     "translation": "Tradução",
